tests/neg-custom-args/captures/leaked-curried.check
-- Error: tests/neg-custom-args/captures/leaked-curried.scala:14:20 ----------------------------------------------------
14 |        () => () => io // error
   |                    ^^
   |              reference (io : Cap^) is not included in the allowed capture set {} of the self type of class Fuzz
-- Error: tests/neg-custom-args/captures/leaked-curried.scala:17:20 ----------------------------------------------------
17 |        () => () => io // error
   |                    ^^
   |               reference (io : Cap^) is not included in the allowed capture set {} of the self type of class Foo
-- Error: tests/neg-custom-args/captures/leaked-curried.scala:13:15 ----------------------------------------------------
13 |      val get: () ->{} () ->{io} Cap^ = // error
   |               ^^^^^^^^^^^^^^^^^^^^^^
   |               Separation failure: value get's type () -> () ->{io} Cap^ hides non-local parameter io
-- Error: tests/neg-custom-args/captures/leaked-curried.scala:16:15 ----------------------------------------------------
16 |      val get: () ->{} () ->{io} Cap^ = // error
   |               ^^^^^^^^^^^^^^^^^^^^^^
   |               Separation failure: value get's type () -> () ->{io} Cap^ hides non-local parameter io
